@@ -1,6 +1,6 @@
 ###############################################################################
 # Makefile for the Malloc library.
-# $Id: Makefile.all.in,v 1.30 1993/11/23 07:40:54 gray Exp $
+# $Id: Makefile.all.in,v 1.31 1993/11/23 09:37:12 gray Exp $
 ###############################################################################
 
 # default root installation directory
@@ -112,6 +112,20 @@ $(TEST) : $(TEST).o $(LIBRARY) $(ARGV)/lib$(ARGV).a
 	rm -f $@
 	$(CC) $(LDFLAGS) $(TEST).o $(LIBS) $(LIBRARY)
 	mv a.out $@
+
+#.PHONY : light
+light : $(TEST)
+	$(TEST) -s -t 10000
+	$(TEST) -s -t 10000
+	$(TEST) -s -t 10000
+	$(TEST) -s -t 10000
+	$(TEST) -s -t 10000
+
+#.PHONY : heavy
+heavy : $(TEST) light
+	$(TEST) -s -t 100000
+	$(TEST) -s -t 100000
+	$(TEST) -s -t 100000
 
 # %.o : %.c
 .c.o :
